--- a/src/ui.html
+++ b/src/ui.html
@@ -7,12 +7,14 @@
      */
 </style>
 <div class="container">
-    <h2> Ui pattern
+    <h1> Ui pattern
 
-    </h2>
+    </h1>
+    <h2>Colors</h3>
     <div id="colors_container">
 
     </div>
+    <h3>Preview</h3>
     <div id="preview">
         <canvas id="canvas_preview"></canvas>
         <!-- <img id="image_preview" style="width: 200px;height: 200px; background-repeat: repeat"/>-->
@@ -25,7 +27,7 @@
         <button id="cancel">Cancel</button>
     </div>
     <div style="padding: 10px">
-        A demo patterns plugin by <a href="https://www.380squares.xyz" target="_blank">Lines by 380s</a>
+        A demo patterns plugin by <a href="https://www.380squares.xyz" target="_blank">By 380s</a>
     </div>
 </div>
 
